--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,13 @@
-name: Continuous Integration
+name: Django CI Pipeline
 
 on:
   push:
-    branches: [develop, feature_CI/CD_GitHub_Actions]
+    branches: [main, develop, feature_CI/CD_GitHub_Actions]
   pull_request:
-    branches: [main, develop]
+    branches: [main]
 
 jobs:
-  lint-and-test:
+  test:
     runs-on: ubuntu-latest
     
     env:
@@ -25,29 +25,32 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install dependencies
+    - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
 
-    - name: Run flake8
+    - name: Install flake8
+      run: pip install flake8
+
+    - name: Check Django installation
+      run: |
+        python -c "import django; print(f'Django version: {django.__version__}')"
+
+    - name: Run flake8 linting
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
-
-    - name: Check for missing migrations
-      run: |
-        python manage.py makemigrations --check --dry-run
 
     - name: Run migrations
       run: |
+        python manage.py makemigrations --check --dry-run
         python manage.py migrate
 
     - name: Run Django tests
       run: |
         python manage.py test --verbosity=2 --failfast
 
-    - name: Run pytest with coverage
+    - name: Run pytest
       run: |
-        pytest -v --tb=short --cov=.
+        pytest -v --tb=short
