--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-Django==4.2.27
+django==4.2.27
 djangorestframework==3.16.1
 django-cors-headers==4.9.0
-celery==5.6.0
+celery==5.6.2
 redis==4.6.0
 psycopg2-binary==2.9.11
 gunicorn==21.2.0
