--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,14 +25,12 @@ jobs:
       with:
         python-version: '3.11'
 
-    - name: Install Python dependencies
+    - name: Install all dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
-
-    - name: Install flake8
-      run: pip install flake8
+        pip install flake8 pytest pytest-django
 
     - name: Check Django installation
       run: |
@@ -41,6 +39,7 @@ jobs:
     - name: Run flake8 linting
       run: |
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=88 --statistics
 
     - name: Run migrations
       run: |
