--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.13'
+        cache: 'pip'
 
     - name: Install all dependencies
       run: |
@@ -44,12 +45,8 @@ jobs:
     - name: Run migrations
       run: |
         python manage.py makemigrations --check --dry-run
-        python manage.py migrate
+        python manage.py migrate --noinput
 
-    - name: Run Django tests
+    - name: Run tests with pytest
       run: |
-        python manage.py test --verbosity=2 --failfast
-
-    - name: Run pytest
-      run: |
-        pytest -v --tb=short
+        pytest -v --tb=short --ds=config.test_settings
